new Knife tool. Angle constraint stucks at «9» input #91785

Closed
opened 2021-09-28 17:09:54 +02:00 by Vyacheslav Kobozev · 14 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-26 21:28, hash: d046a1f2fa

Short description of error
When I try to input 90° as constraint, i can only input 9 and it stucks, so I can`t input next 0

2021-09-28_18-06-12.mp4

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-26 21:28, hash: `d046a1f2fa` **Short description of error** When I try to input 90° as constraint, i can only input 9 and it stucks, so I can`t input next 0 [2021-09-28_18-06-12.mp4](https://archive.blender.org/developer/F10652137/2021-09-28_18-06-12.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Can reproduce this on master.

I will give a try to fix this :)

Hi, thanks for the report. Can reproduce this on master. I will give a try to fix this :)
Member

Added subscriber: @HobbesOS

Added subscriber: @HobbesOS
Member

This was intended functionality. I limited the angle constraint to the range (0, 90) so that it is always acute. You can achieve all possible angles using multiples of that range.
I realise now this may be annoying as it stops you from inputting further angle constraint values and so I can fix that part of it.

@PratikPB2123 I know how I can fix this quickly, but if you still want to try let me know.

This was intended functionality. I limited the angle constraint to the range (0, 90) so that it is always acute. You can achieve all possible angles using multiples of that range. I realise now this may be annoying as it stops you from inputting further angle constraint values and so I can fix that part of it. @PratikPB2123 I know how I can fix this quickly, but if you still want to try let me know.

In #91785#1227562, @HobbesOS wrote:
This was intended functionality. I limited the angle constraint to the range (0, 90) so that it is always acute. You can achieve all possible angles using multiples of that range.
I realise now this may be annoying as it stops you from inputting further angle constraint values and so I can fix that part of it.

Oh, i see. Yes, it is unnecessary limitation. Users can input what they decide. For example 130 to cut circle in 3 parts
Also I want to ask, why default angle is 30? 15 would be better, as it can produce 30,45,90. But 30 only can produce 90.

> In #91785#1227562, @HobbesOS wrote: > This was intended functionality. I limited the angle constraint to the range (0, 90) so that it is always acute. You can achieve all possible angles using multiples of that range. > I realise now this may be annoying as it stops you from inputting further angle constraint values and so I can fix that part of it. Oh, i see. Yes, it is unnecessary limitation. Users can input what they decide. For example 130 to cut circle in 3 parts Also I want to ask, why default angle is 30? 15 would be better, as it can produce 30,45,90. But 30 only can produce 90.
Member

Pratik I know how I can fix this quickly, but if you still want to try let me know.

Hi Cian. Yes, I know how to fix this issue.

@HobbesOS : I realise now this may be annoying as it stops you from inputting further angle constraint values and so I can fix that part of it.
@Vyach : Also I want to ask, why default angle is 30? 15 would be better, as it can produce 30,45,90. But 30 only can produce 90.

we should take Modeling team's opinion on it :)

> Pratik I know how I can fix this quickly, but if you still want to try let me know. Hi Cian. Yes, I know how to fix this issue. > @HobbesOS : I realise now this may be annoying as it stops you from inputting further angle constraint values and so I can fix that part of it. > @Vyach : Also I want to ask, why default angle is 30? 15 would be better, as it can produce 30,45,90. But 30 only can produce 90. we should take Modeling team's opinion on it :)

In #91785#1227600, @PratikPB2123 wrote:
we should take Modeling team's opinion on it :)

Okay, will wait.
I tested constraints with different angles more. IMO 15° is big enough, noticeable step to be sure, I am not miss.
5° too small/precise for fast work. 10° is okay, but will not allow to have 45 as multiply. 45° is rough but okay too.

> In #91785#1227600, @PratikPB2123 wrote: > we should take Modeling team's opinion on it :) Okay, will wait. I tested constraints with different angles more. IMO 15° is big enough, noticeable step to be sure, I am not miss. 5° too small/precise for fast work. 10° is okay, but will not allow to have 45 as multiply. 45° is rough but okay too.
Pratik Borhade self-assigned this 2021-09-29 09:06:54 +02:00

Added subscriber: @Wovchick

Added subscriber: @Wovchick

In #91785#1227562, @HobbesOS wrote:
This was intended functionality. I limited the angle constraint to the range (0, 90) so that it is always acute. You can achieve all possible angles using multiples of that range.

Also I cannot to input double value of angle. I can to input 0.12 for example and input 15.5 don't possible. Can be fix it also?

> In #91785#1227562, @HobbesOS wrote: > This was intended functionality. I limited the angle constraint to the range (0, 90) so that it is always acute. You can achieve all possible angles using multiples of that range. Also I cannot to input double value of angle. I can to input 0.12 for example and input 15.5 don't possible. Can be fix it also?

In #91785#1229611, @Wovchick wrote:
Also I cannot to input double value of angle. I can to input 0.12 for example and input 15.5 don't possible. Can be fix it also?

The same and Pratik already noticed. Will be fixed, I suppose

> In #91785#1229611, @Wovchick wrote: > Also I cannot to input double value of angle. I can to input 0.12 for example and input 15.5 don't possible. Can be fix it also? The same and Pratik already noticed. Will be fixed, I suppose

This issue was referenced by f9755add65

This issue was referenced by f9755add6544667e04b2b0d39c7c3bc794b6bdb8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91785
No description provided.