Fix T91785: Change max input limit for knife tool angle snapping

Patch changes the Knife Tool angle snapping input limit to 180.

Differential Revision: https://developer.blender.org/D12728